--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@
 
 
 
-*** Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Didier Verna
+*** Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005 Didier Verna
 
 This file is part of FiXme.
 
@@ -19,6 +19,10 @@ version 1999/06/01 or later.
 FiXme consists of the files listed in the file `README'.
 
 
+* Version 3.1
+===============
+** Fix bug in environments
+reported by Arnold Beckmann: they were visible in final mode.
 
 * Version 3.0
 =============
@@ -34,45 +38,45 @@ flushing it right.
 =============
 ** New option "silent" to suppress notes logging.
 ** Support for Danish
-thanks to Kim Rud Bille <krbi01@control.auc.dk>
+thanks to Kim Rud Bille <krbi01@control.auc.dk>.
 
 * Version 2.1
 =============
-** Use \nobreakspace instead of the tilda character.
-This avoids conflicts with Babel and Spanish environments.
+** Use \nobreakspace instead of the tilda character:
+this avoids conflicts with Babel and Spanish environments.
 ** Fix bug in index handling
-reported by Knut Lickert <knut@lickert.net>: index entries were
+reported by Knut Lickert: index entries were
 unconditionally built.
 
 * Version 2.0
 =============
-** New feature: note levels
-** New feature: note counters, FiXme usage summary
-** Suggestions from Kasper B. Graversen <kbg@dkik.dk>
+** New feature: note levels.
+** New feature: note counters, FiXme usage summary.
+** Suggestions from Kasper B. Graversen.
 ** Support for Spanish
-thanks to Augustín Martín <agusmba@terra.es>
+thanks to Augustín Martín <agusmba@terra.es>.
 
 * Version 1.5
 =============
-** New layout option: `inline'
+** New `inline' layout option:
 puts notes directly in the text.
 
 * Version 1.4
 =============
-** Support for the koma-script classes
+** Support for the koma-script classes.
 ** Fix bug in \listoffixmes
-reported by Ulf Jaenicke-Roessler <ujr@physik.phy.tu-dresden.de>:
-the command didn't work when called before the first fixme note
+reported by Ulf Jaenicke-Roessler: the command didn't work when called before
+the first fixme note.
 
 * Version 1.3
 =============
 ** Support for Italian
-thanks to Riccardo Murri <murri@phc.unipi.it>
+thanks to Riccardo Murri <murri@phc.unipi.it>.
 
 * Version 1.2
 =============
 ** Support for German
-thanks to Harald Harders <h.harders@tu-bs.de>
+thanks to Harald Harders <h.harders@tu-bs.de>.
 
 
 
