--- a/README
+++ b/README
@@ -2,11 +2,13 @@
 		  a LaTeX2e package for putting fixme notes
 			     in draft documents
 
-	Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004 Didier Verna
 
 
 * Copyright
 ===========
+
+Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005 Didier Verna
+
 
 This file is part of FiXme.
 
