--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.70 Mon, 12 Sep 2005 09:39:49 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.71 Thu, 13 Oct 2005 12:22:07 +0200 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -44,7 +44,7 @@
 % \fi
 %
 % \catcode`\¡=14
-% \CheckSum{837}
+% \CheckSum{809}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
 %%   Lower-case    \a\b\c\d\e\f\g\h\i\j\k\l\m\n\o\p\q\r\s\t\u\v\w\x\y\z
@@ -64,7 +64,7 @@
 % ^^A $Format: "% \\newcommand\\version{v$Version$}"$
 % \newcommand\version{v3.2}
 % ^^A $Format: "% \\newcommand\\releasedate{$ReleaseDate$}"$
-% \newcommand\releasedate{2005/01/31}
+% \newcommand\releasedate{2005/10/13}
 % ^^A $Format: "% \\newcommand\\packagecopyright{$LaTeXCopyright$}"$
 % \newcommand\packagecopyright{Copyright \copyright{} 1998, 1999, 2000, 2001, 2002, 2004, 2005 Didier Verna}
 % \newcommand\fixme{\textsf{FiXme}}
@@ -345,7 +345,9 @@
 %
 % \section{Changes}
 % \begin{itemize}
-% \item[v3.2] Support for Croatian thanks to Marcel Maretic |<marcel@fsb.hr>|\\
+% \item[v3.2] Fix incompatibility with \texttt{amsbook} reported by Claude
+%   Lacoursi\`ere: \cs{@starttoc} takes two arguments.\\
+%   Support for Croatian thanks to Marcel Maretic |<marcel@fsb.hr>|.\\
 %   Fix incompatibility with Beamer reported by Akim Demaille: protect
 %   contents of lox file.
 % \item[v3.1] Fix bug reported by Arnold Beckmann: the environments were
@@ -356,21 +358,23 @@
 %   to change the layout locally.\\
 %   Fix bug reported by Akim Demaille: marginal notes could mess up the
 %   document's layout by flushing it right.
-% \item[v2.2] New option \texttt{silent} to suppress notes logging\\
-%   Support for Danish thanks to Kim Rud Bille |<krbi01@control.auc.dk>|
+% \item[v2.2] New option \texttt{silent} to suppress notes logging.\\
+%   Support for Danish thanks to Kim Rud Bille |<krbi01@control.auc.dk>|.
 % \item[v2.1] Use |\nobreakspace| instead of the tilda character. This avoids
 %   conflicts with Babel in Spanish environments.\\
 %   Fix bug reported by Knut Lickert: index entries were unconditionally built.
-% \item[v2.0] New feature: note levels\\
-%   New feature: \fixme{} note counters and usage summary\\
-%   Suggestions from Kasper B. Graversen |<kbg@dkik.dk>|\\
+% \item[v2.0] New feature: note levels.\\
+%   New feature: \fixme{} note counters and usage summary.\\
+%   Suggestions from Kasper B. Graversen |<kbg@dkik.dk>|.\\
 %   Support for Spanish thanks to Agust\'in Mart\'in |<agusmba@terra.es>|
 % \item[v1.5] New appearance option: \texttt{inline}.
-% \item[v1.4] Support for the koma-script classes\\
+% \item[v1.4] Support for the koma-script classes.\\
 %   Fix bug reported by Ulf Jaenicke-Roessler: the |\listoffixmes| command
 %   didn't work when called before the first \fixme{} note.
-% \item[v1.3] Support for Italian thanks to Riccardo Murri |<murri@phc.unipi.it>|
-% \item[v1.2] Support for German thanks to Harald Harders |<h.harders@tu-bs.de>|
+% \item[v1.3] Support for Italian thanks to Riccardo Murri
+% |<murri@phc.unipi.it>|.
+% \item[v1.2] Support for German thanks to Harald Harders
+% |<h.harders@tu-bs.de>|.
 % \end{itemize}
 %
 % \StopEventually{\par Well, I think that's it. Enjoy using \fixme{}!
@@ -383,7 +387,7 @@
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
 ¡$Format: "\\ProvidesPackage{fixme}[$ReleaseDate: 2004/10/19$ v$Version: 2.3$"$
-\ProvidesPackage{fixme}[2005/01/31 v3.2
+\ProvidesPackage{fixme}[2005/10/13 v3.2
                         Insert fixme notes in your documents]
 
 \RequirePackage{ifthen}
@@ -413,6 +417,7 @@
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
+\let\l@fixme\l@figure
 \newcommand\listoffixmes{}
 \def\listoffixmes@final{}
 \def\listoffixmes@draft{%
@@ -420,6 +425,13 @@
   \@starttoc{lox}%
   \IfFileExists{\jobname .lox}{\@listoffixmes@posttoc}{}%
   }
+
+%    \end{macrocode}
+% The \texttt{amsbook} class has the very ugly idea of redefining the
+% \cs{@starttoc} command to take two arguments. Therefore, I need to provide a
+% specific version of the \cs{listoffixmes} macro:
+%    \begin{macrocode}
+\def\listoffixmes@draft@amsbook{\@starttoc{lox}\listfixmename}
 
 %    \end{macrocode}
 % \begin{macro}{\listfixmename}
@@ -436,9 +448,7 @@
 % \subsubsection{Standard classes}
 % \begin{macro}{\listoffixmes@pretoc@article}
 %   \begin{macro}{\listoffixmes@posttoc@article}
-%     \begin{macro}{\l@fixme@article}
-%       Let's start with the article version:
-%     \end{macro}
+%     Let's start with the article version:
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -447,14 +457,11 @@
     \@mkboth{\MakeUppercase\listfixmename}{\MakeUppercase\listfixmename}}%
   }
 \def\@listoffixmes@posttoc@article{}
-\def\l@fixme@article{\@dottedtocline{1}{1.5em}{2.3em}}
 
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@report}
 %   \begin{macro}{\listoffixmes@posttoc@report}
-%     \begin{macro}{\l@fixme@report}
-%       Here's the report version:
-%     \end{macro}
+%     Here's the report version:
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -468,14 +475,11 @@
     \@mkboth{\MakeUppercase\listfixmename}{\MakeUppercase\listfixmename}}%
   }
 \def\@listoffixmes@posttoc@report{\if@restonecol\twocolumn\fi}
-\def\l@fixme@report{\@dottedtocline{1}{1.5em}{2.3em}}
 
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@book}
 %   \begin{macro}{\listoffixmes@posttoc@book}
-%     \begin{macro}{\l@fixme@book}
-%       And here's the book version:
-%     \end{macro}
+%     And here's the book version:
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -489,16 +493,13 @@
     \@mkboth{\MakeUppercase\listfixmename}{\MakeUppercase\listfixmename}}%
   }
 \def\@listoffixmes@posttoc@book{\if@restonecol\twocolumn\fi}
-\def\l@fixme@book{\@dottedtocline{1}{1.5em}{2.3em}}
 
 %    \end{macrocode}
 %
 % \subsubsection{koma-script classes}
 % \begin{macro}{\listoffixmes@pretoc@scrartcl}
 %   \begin{macro}{\listoffixmes@posttoc@scrartcl}
-%     \begin{macro}{\l@fixme@scrartcl}
-%       Let's start with the scrartcl version:
-%     \end{macro}
+%     Let's start with the scrartcl version:
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -507,14 +508,11 @@
     \@mkboth{\listfixmename}{\listfixmename}}%
   }
 \def\@listoffixmes@posttoc@scrartcl{}
-\def\l@fixme@scrartcl{\@dottedtocline{1}{1.5em}{2.3em}}
 
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@scrreprt}
 %   \begin{macro}{\listoffixmes@posttoc@scrreprt}
-%     \begin{macro}{\l@fixme@scrreprt}
-%       Here's the scrreprt version:
-%     \end{macro}
+%     Here's the scrreprt version:
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -528,14 +526,11 @@
     \@mkboth{\listfixmename}{\listfixmename}}%
   }
 \def\@listoffixmes@posttoc@scrreprt{\if@restonecol\twocolumn\fi}
-\def\l@fixme@scrreprt{\@dottedtocline{1}{1.5em}{2.3em}}
 
 %    \end{macrocode}
 % \begin{macro}{\listoffixmes@pretoc@scrbook}
 %   \begin{macro}{\listoffixmes@posttoc@scrbook}
-%     \begin{macro}{\l@fixme@scrbook}
-%       And here's the scrbook version:
-%     \end{macro}
+%     And here's the scrbook version:
 %   \end{macro}
 % \end{macro}
 %    \begin{macrocode}
@@ -549,7 +544,6 @@
     \@mkboth{\listfixmename}{\listfixmename}}%
   }
 \def\@listoffixmes@posttoc@scrbook{\if@restonecol\twocolumn\fi}
-\def\l@fixme@scrbook{\@dottedtocline{1}{1.5em}{2.3em}}
 
 %    \end{macrocode}
 %
@@ -997,6 +991,35 @@
   }
 
 \DeclareOption{draft}{
+  \@ifclassloaded{article}{
+    \let\@listoffixmes@pretoc\@listoffixmes@pretoc@article
+    \let\@listoffixmes@posttoc\@listoffixmes@posttoc@article}{
+    \@ifclassloaded{report}{
+      \let\@listoffixmes@pretoc\@listoffixmes@pretoc@report
+      \let\@listoffixmes@posttoc\@listoffixmes@posttoc@report}{
+      \@ifclassloaded{book}{
+        \let\@listoffixmes@pretoc\@listoffixmes@pretoc@book
+        \let\@listoffixmes@posttoc\@listoffixmes@posttoc@book}{
+        \@ifclassloaded{scrartcl}{
+          \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrartcl
+          \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrartcl}{
+          \@ifclassloaded{scrreprt}{
+            \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrreprt
+            \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrreprt}{
+            \@ifclassloaded{scrbook}{
+              \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrbook
+              \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrbook}{
+              \@ifclassloaded{amsbook}{
+                \let\listoffixmes@draft\listoffixmes@draft@amsbook}{
+                %% Use the article layout by default.
+                \let\@listoffixmes@pretoc\@listoffixmes@pretoc@article
+                \let\@listoffixmes@posttoc\@listoffixmes@posttoc@article}
+            }
+          }
+        }
+      }
+    }
+  }
   \let\fixme@note\fixme@note@draft
   \let\fixme@warning\fixme@warning@draft
   \let\fixme@error\fixme@error@draft
@@ -1004,40 +1027,7 @@
   \let\@fxenvbegin\@fxenvbegin@draft
   \let\@fxenvend\@fxenvend@draft
   \let\listoffixmes\listoffixmes@draft
-  \@ifclassloaded{article}{
-    \let\@listoffixmes@pretoc\@listoffixmes@pretoc@article
-    \let\@listoffixmes@posttoc\@listoffixmes@posttoc@article
-    \let\l@fixme\l@fixme@article}{
-    \@ifclassloaded{report}{
-      \let\@listoffixmes@pretoc\@listoffixmes@pretoc@report
-      \let\@listoffixmes@posttoc\@listoffixmes@posttoc@report
-      \let\l@fixme\l@fixme@report}{
-      \@ifclassloaded{book}{
-        \let\@listoffixmes@pretoc\@listoffixmes@pretoc@book
-        \let\@listoffixmes@posttoc\@listoffixmes@posttoc@book
-        \let\l@fixme\l@fixme@book}{
-        \@ifclassloaded{scrartcl}{
-          \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrartcl
-          \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrartcl
-          \let\l@fixme\l@fixme@scrartcl}{
-          \@ifclassloaded{scrreprt}{
-            \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrreprt
-            \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrreprt
-            \let\l@fixme\l@fixme@scrreprt}{
-            \@ifclassloaded{scrbook}{
-              \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrbook
-              \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrbook
-              \let\l@fixme\l@fixme@scrbook}{
-              %% Use the article layout by default.
-              \let\@listoffixmes@pretoc\@listoffixmes@pretoc@article
-              \let\@listoffixmes@posttoc\@listoffixmes@posttoc@article
-              \let\l@fixme\l@fixme@article}
-            }
-          }
-        }
-      }
-    }
-  }
+}
 
 %    \end{macrocode}
 % Put us in \texttt{english} and \texttt{final} mode, and enable the marginal
