--- a/TODO
+++ b/TODO
@@ -9,3 +9,8 @@ turn fixme into a collaborative annotation tool.
 the index because of special caracters (! etc). Also, maybe mention in the doc
 problems with commands like \footenotesize going into the index, and the use
 of \protect.
+
+* parler de mparhack dans la doc
+
+* Revoir les hacks pour ams{book|art}. Ils ne fonctionnent pas comme les
+autres (avec pretoc etc).
