--- a/fixme.dtx
+++ b/fixme.dtx
@@ -4,7 +4,7 @@
 %
 % Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna.
 %
-% PRCS: $Id: fixme.dtx 1.74 Tue, 12 Sep 2006 12:07:42 +0200 didier $
+% PRCS: $Id: fixme.dtx 1.75 Tue, 12 Dec 2006 14:31:03 +0100 didier $
 %
 % Author:        Didier Verna <didier@lrde.epita.fr>
 % Maintainer:    Didier Verna <didier@lrde.epita.fr>
@@ -44,7 +44,7 @@
 % \fi
 %
 % \catcode`\¡=14
-% \CheckSum{860}
+% \CheckSum{864}
 %% \CharacterTable
 %%  {Upper-case    \A\B\C\D\E\F\G\H\I\J\K\L\M\N\O\P\Q\R\S\T\U\V\W\X\Y\Z
 %%   Lower-case    \a\b\c\d\e\f\g\h\i\j\k\l\m\n\o\p\q\r\s\t\u\v\w\x\y\z
@@ -372,6 +372,8 @@
 % \item[v3.3] Fix bug reported by Stefan Mann: a typo in the
 % |\fixme@footnotetrue| macro name.\\
 % Documentation improvements suggested by Brian van den Broek.
+% \item[v3.3] Fix incompatibility with \texttt{amsart} reported by Lars
+%   Madsen: \cs{@starttoc} takes two arguments.
 % \item[v3.2] Added the marginclue layout option which only signals a fixme in
 %   the margin, withtout the actual contents.\\
 %   Fix incompatibility with \texttt{amsbook} reported by Claude
@@ -434,14 +436,14 @@
 %       class dependant fashion. Classes currently recognized are article,
 %       report, book and their koma-script replacements.
 %
-%       In order to prevent the List of Fixme's chapter heading from being
-%       generated when there are no fixmes, a test on the existence of the lox
-%       file is performed. There's a slight bug left however: after removing
-%       the last fixme, one ends up with an empty lox file, so the heading
-%       still appear. Previously, this was done by checking if some fixmes
-%       were given, but that was buggy: the list of fixme's could not appear
-%       before the first fixme note\ldots I should try to detect whether the
-%       file is empty.
+%       In order to prevent the List of Fixme's heading from being generated
+%       when there are no fixmes, a test on the existence of the lox file is
+%       performed. There's a slight bug left however: after removing the last
+%       fixme, one ends up with an empty lox file, so the heading still
+%       appear. Previously, this was done by checking if some fixmes were
+%       given, but that was buggy: the list of fixme's could not appear before
+%       the first fixme note\ldots I should try to detect whether the file is
+%       empty.
 %     \end{macro}
 %   \end{macro}
 % \end{macro}
@@ -456,11 +458,11 @@
   }
 
 %    \end{macrocode}
-% The \texttt{amsbook} class has the very ugly idea of redefining the
-% \cs{@starttoc} command to take two arguments. Therefore, I need to provide a
-% specific version of the \cs{listoffixmes} macro:
+% The \texttt{amsbook} and \texttt{amsart} classes have the very ugly idea of
+% redefining the \cs{@starttoc} command to take two arguments. Therefore, I
+% need to provide a specific version of the \cs{listoffixmes} macro:
 %    \begin{macrocode}
-\def\listoffixmes@draft@amsbook{\@starttoc{lox}\listfixmename}
+\def\listoffixmes@draft@ams{\@starttoc{lox}\listfixmename}
 
 %    \end{macrocode}
 % \begin{macro}{\listfixmename}
@@ -1076,10 +1078,13 @@
 	      \let\@listoffixmes@pretoc\@listoffixmes@pretoc@scrbook
 	      \let\@listoffixmes@posttoc\@listoffixmes@posttoc@scrbook}{
 	      \@ifclassloaded{amsbook}{
-		\let\listoffixmes@draft\listoffixmes@draft@amsbook}{
-		%% Use the article layout by default.
-		\let\@listoffixmes@pretoc\@listoffixmes@pretoc@article
-		\let\@listoffixmes@posttoc\@listoffixmes@posttoc@article}
+		\let\listoffixmes@draft\listoffixmes@draft@ams}{
+		\@ifclassloaded{amsart}{
+		  \let\listoffixmes@draft\listoffixmes@draft@ams}{
+		  %% Use the article layout by default.
+		  \let\@listoffixmes@pretoc\@listoffixmes@pretoc@article
+		  \let\@listoffixmes@posttoc\@listoffixmes@posttoc@article}
+	      }
 	    }
 	  }
 	}
