--- a/fixme.dtx
+++ b/fixme.dtx
@@ -659,14 +659,14 @@
 \def\fixme@setmargin{%
   \iffixme@marginclue%
     \PackageWarning{FiXme}{%
-      Marginal notes requested; tunrning marginal clues off}%
+      Marginal notes requested; turning marginal clues off}%
     \fixme@margincluefalse%
   \fi%
   \fixme@margintrue}
 \def\fixme@setmarginclue{%
   \iffixme@margin%
     \PackageWarning{FiXme}{%
-      Marginal clues requested; tunrning marginal notes off}%
+      Marginal clues requested; turning marginal notes off}%
     \fixme@marginfalse%
   \fi%
   \fixme@margincluetrue}
