--- a/fixme.dtx
+++ b/fixme.dtx
@@ -61,34 +61,31 @@
 %%   Grave accent  \`     Left brace    \{     Vertical bar  \|
 %%   Right brace   \}     Tilde         \~}
 %
-% ^^A $Format: "% \\newcommand\\version{v$Version$}"$
-% \newcommand\version{v3.3}
-% ^^A $Format: "% \\newcommand\\releasedate{$ReleaseDate$}"$
+% \newcommand\version{3.3}
 % \newcommand\releasedate{2006/04/12}
-% ^^A $Format: "% \\newcommand\\packagecopyright{$LaTeXCopyright$}"$
 % \newcommand\packagecopyright{Copyright \copyright{} 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006 Didier Verna}
 % \newcommand\fixme{\textsf{FiXme}}
 % \newcommand\auctex{AUC-\TeX}
 % \MakeShortVerb{\|}
 % \date\today
 % \title{\fixme{} -- a \LaTeXe{} package for inserting fixme notes
-% in your documents \thanks{This document describes \fixme{}
-% \version, release date \releasedate.}}
+%   in your documents\thanks{This document describes \fixme{} \version,
+%     release date \releasedate.}}
 % \author{Didier Verna\\
-% \texttt{mailto:didier@lrde.epita.fr}\\
-% \texttt{http://www.lrde.epita.fr/\~{}didier/}}
+%   \texttt{mailto:didier@lrde.epita.fr}\\
+%   \texttt{http://www.lrde.epita.fr/\~{}didier/}}
 % \maketitle
 %
 %
 % \begin{abstract}
-% In the process of writing a long document, it is a common practice to leave
-% some parts unwritten or uncomplete, and come back to them later. In such
-% cases, you probably want to stick clues about which parts need to be
-% ``fixed'', where they are located, and what needs to be done. This is what I
-% call ``fixme notes''. The purpose of this package is to provide you with
-% convenient ways to insert \fixme{} notes in your documents.\par
-% The \fixme{} package is \packagecopyright{}, and distributed under the terms
-% of the LPPL license.
+%   In the process of writing a long document, it is a common practice to
+%   leave some parts unwritten or uncomplete, and come back to them later. In
+%   such cases, you probably want to stick clues about which parts need to be
+%   ``fixed'', where they are located, and what needs to be done. This is what
+%   I call ``fixme notes''. The purpose of this package is to provide you with
+%   convenient ways to insert \fixme{} notes in your documents.\par
+%   The \fixme{} package is \packagecopyright{}, and distributed under the
+%   terms of the LPPL license.
 % \end{abstract}
 %
 %
@@ -370,8 +367,8 @@
 % \section{Changes}
 % \begin{itemize}
 % \item[v3.3] Fix bug reported by Stefan Mann: a typo in the
-% |\fixme@footnotetrue| macro name.\\
-% Documentation improvements suggested by Brian van den Broek.
+%   |\fixme@footnotetrue| macro name.\\
+%   Documentation improvements suggested by Brian van den Broek.
 % \item[v3.3] Fix incompatibility with \texttt{amsart} reported by Lars
 %   Madsen: \cs{@starttoc} takes two arguments.
 % \item[v3.2] Added the marginclue layout option which only signals a fixme in
@@ -403,9 +400,9 @@
 %   Fix bug reported by Ulf Jaenicke-Roessler: the |\listoffixmes| command
 %   didn't work when called before the first \fixme{} note.
 % \item[v1.3] Support for Italian thanks to Riccardo Murri
-% |<murri@phc.unipi.it>|.
+%   |<murri@phc.unipi.it>|.
 % \item[v1.2] Support for German thanks to Harald Harders
-% |<h.harders@tu-bs.de>|.
+%   |<h.harders@tu-bs.de>|.
 % \end{itemize}
 %
 % \StopEventually{\par Well, I think that's it. Enjoy using \fixme{}!
@@ -417,7 +414,6 @@
 % \end{macro}
 %    \begin{macrocode}
 \NeedsTeXFormat{LaTeX2e}
-¡$Format: "\\ProvidesPackage{fixme}[$ReleaseDate: 2004/10/19$ v$Version: 2.3$"$
 \ProvidesPackage{fixme}[2006/04/12 v3.3
 			Insert fixme notes in your documents]
 
